2009-12-23  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-parse.el (form-up-to-point.1 [test]): Fix test case.

2009-12-23  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-c-p-c.el (complete-symbol* [test]): Fix test case.

2009-12-23  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-autodoc.el (autodoc.1 [test]): Add a test case involving
	DEFMETHOD.

	* slime-c-p-c.el (complete-form [test]): New test. Fails for the
	moment.

	Reported by Matthias Koeppe.

2009-12-22  Helmut Eller  <heller@common-lisp.net>

	Commands to save&restore image files without disconnecting.

	* slime-snapshot.el: New file.
	* swank-snapshot.lisp: New file.

2009-12-21  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-arglists.lisp (completions-for-keyword): Return nil
	instead of :not-available because the function is supposed to
	return a list of available completions.

	Adapted from patch by Ariel Badichi.

2009-12-21  Tobias C. Rittweiler  <tcr@freebits.de>

	Today's cleanup day.

	* slime-parse.el (slime-incomplete-form-at-point)
	(slime-parse-sexp-at-point)
	(slime-has-symbol-syntax-p)
	(slime-incomplete-sexp-at-point)
	(slime-parse-extended-operator-name)
	(slime-extended-operator-name-parser-alist)
	(slime-make-extended-operator-parser/look-ahead)
	(slime-parse-extended-operator/proclaim)
	(slime-parse-extended-operator/declare)
	(slime-parse-extended-operator/check-type)
	(slime-parse-extended-operator/the)
	(slime-nesting-until-point)
	(slime-make-form-spec-from-string)
	(slime-enclosing-form-specs)
	(slime-ensure-list)
	(slime-beginning-of-string)
	(slime-check-enclosing-form-specs)
	(enclosing-form-specs.1 [test]): Deleted. The new arglist code made
	all this superfluous.

	* slime-autodoc.el (slime-autodoc-accuracy-depth): New defcustom.
	(slime-retrieve-arglist): Return :not-available if appropriate.
	(slime-arglist): Use `slime-retrieve-arglist'. Delete reference to
	undefined variable.
	(slime-autodoc-thing-at-point): Deleted, not needed anymore.