@@ -1,3 +1,10 @@
+2009-12-25  Tobias C. Rittweiler  <tcr@freebits.de>
+
+	* swank-arglists.lisp (delete-given-args): Make sure to properly
+	delete provided-args.
+
+	* slime-c-p-c.el (complete-form [test]): Extend. Succeeds now.
+
 2009-12-23  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* slime-parse.el (form-up-to-point.1 [test]): Fix test case.
